2006-02-18 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* etc/REFERENCE.pkg: Updated.

	* etc/prometheus.conf.in: Added warnings not to mess with "dangerous"
	  settings, removed obsolete config variables.
	* man/*: Cleaned up man pages, removed references to reroot, fixed
	  some inaccuracies.

2006-02-17 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* man/pkgrm.8.in: Documented new `--sources' option.
	* scripts/pkgrm.in: Added new `--sources' option to remove unneeded
	  source files.

2006-02-16 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/libprometheus.bash.in: Disabled command hashing while
	  building and installing a package.

2007-02-08 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* man/pkginfo.1.in: Fixed a typo.

	* etc/REFERENCE.pkg: Changed log_install from `yes' to `no' so that
	  REFERENCE.pkg would no longer appear in the output of pkginfo -a.

	* scripts/pkginfo.in: Fixed a bug where the verbose flag was ignored
	  if more than one package was queried.

	* testsuite/libprometheus/get_installed_version/*,
	  testsuite/libprometheus/source_config/logdir,
	  testsuite/libprometheus/Makefile: Removed obsolete tests.

2007-02-07 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/pkgrm.in: Renamed `pkg_post_remove' to `post_remove_pkg'
	  for consistency's sake.
	* profiles/lfs-6.1/prometheus: Fixed wrong name for the deps array.

2006-02-06 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* *: Tagged and released Prometheus 0.2-beta1

	* profiles/lfs-6.1/lfs, profiles/lfs-6.1/stage2,
	  profiles/lfs-6.1/rootfs: Fixed the last issues with the LFS profiles.
	* scripts/libprometheus.bash.in: Fixed another bug that cripples the
	  environment during LFS builds.
	* scripts/pkginstall.in: Fixed checking for already installed packges
	  when building LFS.

2006-02-05 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/absolute.cc: Implemented relative function.