@@ -26,11 +26,9 @@ all:
 	$(MAKE) -C profiles
 	$(MAKE) -C scripts
 	$(MAKE) -C testsuite
-#	$(MAKE) -C x86stepping
 
 check:
 	$(MAKE) -C testsuite check
-#	$(MAKE) -C x86stepping check
 
 clean:
 	$(MAKE) -C etc clean
@@ -38,7 +36,6 @@ clean:
 	$(MAKE) -C profiles clean
 	$(MAKE) -C scripts clean
 	$(MAKE) -C testsuite clean
-#	$(MAKE) -C x86stepping clean
 
 user:
 	groupadd -f prometheus
@@ -65,4 +62,3 @@ install: all update
 update: all
 	$(MAKE) -C man install
 	$(MAKE) -C scripts install
-#	$(MAKE) -C x86stepping install
