@@ -1,3 +1,9 @@
+2006-02-19 Gareth Jones <gareth_jones@users.berlios.de>
+
+	* x86stepping: Removed.
+	* Makefile: Removed references to x86stepping (they were already
+	  commented out).
+
 2006-02-18 Oliver Brakmann <oliverbrakmann@users.berlios.de>
 
 	* etc/REFERENCE.pkg: Updated.
